[style] Update video source and add Safari detection - Updated the video source URL to use a webm format for better compatibility. - Added a function to detect if the browser is Safari. - If the browser is Safari, changed the video source URL to use an mp4 format. - Ensured that the video properties autoplay, muted, and loop are set correctly. - Removed unnecessary code related to detecting Apple devices.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Test</title>
+<title>[LOCAL] Oregon State Police : Apply Yourself : Jobs and Careers : State of Oregon</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -11,15 +11,15 @@
     <div class="flexbox">
         <div class="text">
             <h1>Apply the Law.<br/> Apply Yourself.<br/> <span>Apply Today.</span></h1>
-            <p>Launch a rewarding and impactful career<br/> as a Trooper with the Oregon State Police.</p>
+            <p>Launch a rewarding and impactful career<br class="hide"/> as a Trooper with the Oregon State Police.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video">
             <!-- <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%"> -->
             <video id="ospVideo" width="100%" autoplay muted loop>
-                <source id="videoSource" type="">
-                <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
-            </video>       
+                <source id="videoSource" src="https://storage.googleapis.com/osp-video/osp_video_1780x1080.webm" type="video/webm">
+                <img id="ospImg" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
+            </video>                
         </div>        
     </div>
 </header>
@@ -47,15 +47,15 @@
 <section class="threecolumn">
     <div class="flexbox">
         <div class="column">
-            <h3>More than a job.<br/> A calling.</h3>
+            <h3>More than a job.<br class="hide"/> A calling.</h3>
             <p>Oregon State Police are service-oriented individuals who are hardwired to respect and apply the law. Through charter and disposition, we find purpose in the process of keeping the peace and protecting the rights of all of Oregon’s communities.</p>
         </div>
         <div class="column">
-            <h3>Opportunities as diverse<br/> as the state you will serve.</h3>
+            <h3>Opportunities as diverse<br class="hide"/> as the state you will serve.</h3>
             <p>Troopers are trained to work throughout the state. You will be encouraged to prepare for assignments ranging from patrol to interdiction to investigation and more; ensuring you willll have the skills and flexibility to adapt and continue to advance your career.</p>
         </div>
         <div class="column">
-            <h3>A serious choice<br/> for serious people.</h3>
+            <h3>A serious choice<br class="hide"/> for serious people.</h3>
             <p>Before anyone steps behind our badge, Oregon State Police Recruit Troopers will have demonstrated innate abilities to meet adversity with composure, calamity with compassion, and uncertainty with confidence.</p>
         </div>
     </div>
@@ -66,7 +66,7 @@
     </div>
     <div class="flexbox">
         <div class="text">
-            <h2>Do You Have <br/>What it Takes?</h2>
+            <h2>Do You Have <br class="hide"/>What it Takes?</h2>
             <p>Interested in how to become a Trooper? Before we invite you to our training academy, you will need to show you meet the requirements and have the skills needed to succeed as an Oregon State Trooper. Beyond the physical and academic qualifications, this includes possessing the composure, compassion and confidence necessary to serve.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
@@ -82,12 +82,12 @@
     </div>
     <div class="flexbox">
         <div class="column one">
-            <h2>A Natural Next Step <br/>for Military Veterans</h2>
+            <h2>A Natural Next Step <br class="hide"/>for Military Veterans</h2>
             <p>The skills you have gained in service of your country directly transfer to a career in law enforcement. If you are looking to continue your career in service, the Oregon State Police is a perfect fit.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn serv" role="button">Apply Now</a>
         </div>
         <div class="column two">
-            <h2>Make a Lateral <br/>Transfer</h2>
+            <h2>Make a Lateral <br class="hide"/>Transfer</h2>
             <p>Are you already working in another part of law enforcement? Or are you a cop in another state looking to make a lateral transfer? Our pay structure, benefits, and diversity of programs, jobs, and growth opportunities are exceptional.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn serv" role="button">Apply Now</a>
         </div>
