[style] Update image alt text and adjust margins in CSS
- Updated the alt text for an image in index.html to reflect a change in wording.
- Adjusted the margins for certain elements in styles.css to improve spacing and alignment.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <source id="videoSource" src="https://storage.googleapis.com/osp-video/osp_video_1780x1080.webm" type="video/webm">
                 <img id="ospImg" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
             </video>                
-        </div>        
+        </div>
     </div>
 </header>
 <section class="exceptional">
     <div class="flexbox" style="gap: 128px;">
         <div class="osp_bike">
-            <img class="osp_bike" src="https://storage.googleapis.com/osp-video/img/osp_bike.png" alt="An Exceptional Force Seeking Exceptional Cadets"/>
+            <img class="osp_bike" src="https://storage.googleapis.com/osp-video/img/osp_bike.png" alt="An Exceptional Force Seeking Exceptional Recruits"/>
         </div>
         <div class="text">
-            <h2>An Exceptional Force Seeking Exceptional Cadets</h2>
+            <h2>An Exceptional Force Seeking Exceptional Recruits</h2>
             <p>The Oregon State Police is a modern, multi-disciplined policing agency charged with protecting Oregon’s people, wildlife, and natural resources. We are recruiting exceptional individuals for an exceptional opportunity to build a meaningful, fulfilling career in law enforcement.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="column">
             <h3>Opportunities as diverse<br class="hide"/> as the state you will serve.</h3>
-            <p>Troopers are trained to work throughout the state. You will be encouraged to prepare for assignments ranging from patrol to interdiction to investigation and more; ensuring you willll have the skills and flexibility to adapt and continue to advance your career.</p>
+            <p>Troopers are trained to work throughout the state. You will be encouraged to prepare for assignments ranging from patrol to interdiction to investigation and more; ensuring you will have the skills and flexibility to adapt and continue to advance your career.</p>
         </div>
         <div class="column">
             <h3>A serious choice<br class="hide"/> for serious people.</h3>
