[style] Updated YouTube video player and removed controls
The YouTube video player in index.html was updated to use a different video URL. Additionally, the CSS in styles.css was modified to hide the controls for the YouTube video player.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video youtube">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h8uy_Gvtolo?si=kResA59zx585YGxx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xeitw-v_t-E?rel=0&showinfo=0&controls=0&modestbranding=1&showsearch=0&autohide=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <!-- <img src="https://storage.googleapis.com/osp-video/img/osp_face.png" width="100%" alt="Do You Have What it Takes?" /> -->
         </div>
     </div>
