[style] Improve video styling and controls
- Removed unused YouTube video iframe.
- Added a new video element with custom controls for the "protostars" section.
- Adjusted CSS to properly display and size the new video element.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video">
-            <!-- <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%"> -->
             <video id="ospVideo" width="100%" autoplay muted loop>
                 <source id="videoSource" src="https://storage.googleapis.com/osp-video/osp_video_1780x1080.webm" type="video/webm">
                 <img id="ospImg" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
@@ -70,9 +69,14 @@
             <p>Interested in how to become a Trooper? Before we invite you to our training academy, you will need to show you meet the requirements and have the skills needed to succeed as an Oregon State Trooper. Beyond the physical and academic qualifications, this includes possessing the composure, compassion and confidence necessary to serve.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
-        <div class="video youtube">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xeitw-v_t-E?rel=0&showinfo=0&controls=0&modestbranding=1&showsearch=0&autohide=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <!-- <img src="https://storage.googleapis.com/osp-video/img/osp_face.png" width="100%" alt="Do You Have What it Takes?" /> -->
+        <div class="video protostars">
+            <video
+                id="protostarsVideo"
+                controls
+                poster="https://storage.googleapis.com/osp-video/img/protostars_60_sec_v2.png"
+                >
+                <source src="https://storage.googleapis.com/osp-video/protostars_60_sec_v2_VP9.webm" type="video/webm">
+            </video>
         </div>
     </div>
 </section>
