[style] Updated video player and added new sections
- Updated the video player to handle Safari and iOS devices by switching to MP4 format.
- Added a new section for application deadline.
- Added a new section for step-by-step instructions on becoming an Oregon State Trooper.
- Added CSS styles for the new sections.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>[LOCAL] Oregon State Police : Apply Yourself : Jobs and Careers : State of Oregon</title>
+<title>Oregon State Police : Apply Yourself : Jobs and Careers : State of Oregon</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -16,12 +16,26 @@
         </div>
         <div class="video">
             <video id="ospVideo" width="100%" autoplay muted loop>
+            <!-- THIS IS THE IOS URL https://storage.googleapis.com/osp-video/osp_video_1780x1080_ios.webm -->
+            <!-- THIS IS THE ALPHA WEBM https://storage.googleapis.com/osp-video/osp_video_1780x1080.webm -->
                 <source id="videoSource" src="https://storage.googleapis.com/osp-video/osp_video_1780x1080.webm" type="video/webm">
                 <img id="ospImg" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
             </video>                
         </div>
+        <!-- <div class="video mobile">
+            <video
+                id="protostarsVideo"
+                controls
+                poster="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png"
+                >
+                <source src="https://storage.googleapis.com/osp-video/osp_video_1780x1080_ios.webm" type="video/webm">
+            </video>
+        </div> -->
     </div>
 </header>
+<section class="deadline">
+    Deadline to Apply: November 30th, 2023
+</section>
 <section class="exceptional">
     <div class="flexbox" style="gap: 128px;">
         <div class="osp_bike">
@@ -75,6 +89,7 @@
                 controls
                 poster="https://storage.googleapis.com/osp-video/img/protostars_60_sec_v2.png"
                 >
+                <source src="https://storage.googleapis.com/osp-video/protostars_60_sec_v2_H.264.mp4" type="video/mp4">
                 <source src="https://storage.googleapis.com/osp-video/protostars_60_sec_v2_VP9.webm" type="video/webm">
             </video>
         </div>
@@ -95,6 +110,88 @@
             <p>Are you already working in another part of law enforcement? Or are you a cop in another state looking to make a lateral transfer? Our pay structure, benefits, and diversity of programs, jobs, and growth opportunities are exceptional.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn serv" role="button">Apply Now</a>
         </div>
+    </div>
+</section>
+<section class="steps-section">
+    <div class="steps">
+        <div class="row title">How to Become an Oregon State Trooper</div>
+        <div class="column" id="step-1">
+            <h4>Step 1: Apply</h4>
+            <p>Applicants must submit an <strong>online job application</strong> with all supplemental materials and information.</p>
+        </div>
+        <div class="column" id="step-2">
+            <h4>Step 2: Entry Level Testing</h4>
+            <p>Applicants must then pass the <strong>Entry Level Testing (ELT)</strong>, consisting of the <strong>physical fitness test</strong>, an academic exam, and a <strong>pre-offer psychological exam and risk assessment</strong>.</p>
+        </div>
+        <div class="column" id="step-3">
+            <h4>Step 3: Command Interview</h4>
+            <p>Applicants selected to move onto this stage will then sit with a panel of Oregon State Police Majors and Captains for a <strong>30-to-40-minute interview.</strong></p>
+        </div>
+        <div class="column" id="step-4">
+            <h4>Step 4: Background Check</h4>
+            <p>Applicants must fill out a <strong>Recruit Background History Packet</strong> and sign wavers permitting OSP to conduct a thorough <strong>background investigation</strong>.</p>
+        </div>
+        <div class="column" id="step-5">
+            <h4>Step 5: Conditional Offer</h4>
+            <p>At this stage, OSP will extend a <strong>conditional job offer</strong> to applicants deemed up for the challenge of becoming a Trooper.</p>
+        </div>
+        <div class="column" id="step-6">
+        <h4>Step 6: Post-Offer Evaluation</h4>
+        <p>Successful applicants will then be scheduled for the required <strong>medical screening</strong>, <strong>psychological examination</strong>, and a <strong>fingerprint check</strong>.</p>
+        </div>
+        <div class="column last" id="step-7">
+            <h4>Step 7: Appointment & Training</h4>
+            <p>Recruit Troopers attend training consisting of:</p>
+            <ul>
+                <li><strong>OSP Pre-Academy</strong> (~3 weeks)</li>
+                <li><strong>DPSST Basic Police Academy</strong> (16 weeks)</li>
+                <li><strong>OSP Post-Academy</strong> (6-7 weeks)</li>
+                <li><strong>Field Training</strong> (3 months)</li>
+            </ul>
+        </div>
+        <div class="row button">                           
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
+        </div>
+    </div>
+</section>
+<section class="faq">
+    <div class="text">
+        <h2>Frequently Asked Questions:</h@>
+    </div>
+    <div class="text">
+        <h3>What are the police academy qualifications and skills?</h3>
+        <ul>
+            <li>Must be a US Citizen or able to attain citizenship within 18 months of hire.</li>
+            <li>High school diploma or equivalent.</li>
+            <li>21 years of age by the first day of employment.</li>
+            <li>Valid driver's license.</li>
+            <li>Meet all medical and physical requirements.</li>
+            <li>Pass all background, credit, and criminal history checks.</li>
+            <li>Be of good moral character, possessing empathy, courage, fortitude, honesty, loyalty, and sound judgment..</li>
+        </ul>
+    </div>
+    <div class="text">
+        <h3>How does a candidate stand out from other candidates?</h3>
+        <ul>
+            <li>Working understanding of the Oregon Revised Statute (ORS) and Oregon Administrative Rule (OAR).</li>
+            <li>Strong written and verbal communication and de-escalation skills.</li>
+            <li>Ability to apply critical thinking and decision-making in stressful situations where a timely resolution is required.</li>
+            <li>Demonstrated ability to perform under pressure and maintain composure, particularly in a position exposed to a high level of public scrutiny.</li>
+            <li>Strong integrity and ethics, along with responsibility and accountability in all professional and personal interactions.</li>
+            <li>Working knowledge and desire to learn about law enforcement as a career. Including participating in ride-alongs with OSP or other law enforcement agencies, understanding the OSP mission and values, and actively preparing for a career in law enforcement.</li>
+        </ul>
+    </div>
+    <div class="text">
+        <h3>How Long Does it Take to Become an Oregon State Police Officer?</h3>
+        <p>The application process takes an average of 6 months, from submitting an application to arriving at the Academy.</p>
+        <p>Pre-, Basic, and Post-Academy training take 26 weeks, followed by three months of Field Training. Recruits can expect a nine month journey from the first day of the Academy to the first day of solo patrol.</p>
+    </div>
+    <div class="text">
+        <h3>What Does the Application Process & Police Academy Cost?</h3>
+        <p>All costs related to the application process (meals and associated travel notwithstanding) are covered by OSP. All training costs are fully paid for once an applicant has been hired as a Recruit Trooper.</p>
+    </div>
+    <div class="button">                           
+        <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
     </div>
 </section>
 <!-- DELETE BELOW -->
