[style] Update job title in index.html
The code changes update the job title from "Recruit Troopers" to "Trooper Recruits" in multiple sections of the index.html file. This change reflects a more accurate description of the role within the Oregon State Police organization.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="column">
             <h3>A serious choice<br class="hide"/> for serious people.</h3>
-            <p>Before anyone steps behind our badge, Oregon State Police Recruit Troopers will have demonstrated innate abilities to meet adversity with composure, calamity with compassion, and uncertainty with confidence.</p>
+            <p>Before anyone steps behind our badge, Oregon State Police Trooper Recruits will have demonstrated innate abilities to meet adversity with composure, calamity with compassion, and uncertainty with confidence.</p>
         </div>
     </div>
 </section>
@@ -141,7 +141,7 @@
         </div>
         <div class="column last" id="step-7">
             <h4>Step 7: Appointment & Training</h4>
-            <p>Recruit Troopers attend training consisting of:</p>
+            <p>Trooper Recruits attend training consisting of:</p>
             <ul>
                 <li><strong>OSP Pre-Academy</strong> (~3 weeks)</li>
                 <li><strong>DPSST Basic Police Academy</strong> (16 weeks)</li>
@@ -188,7 +188,7 @@
     </div>
     <div class="text">
         <h3>What Does the Application Process & Police Academy Cost?</h3>
-        <p>All costs related to the application process (meals and associated travel notwithstanding) are covered by OSP. All training costs are fully paid for once an applicant has been hired as a Recruit Trooper.</p>
+        <p>All costs related to the application process (meals and associated travel notwithstanding) are covered by OSP. All training costs are fully paid for once an applicant has been hired as a Trooper Recruit.</p>
     </div>
     <div class="button">                           
         <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
