[style] Improve responsiveness of step columns - Adjusted margin for step columns to improve spacing and readability on different screen sizes. - Updated CSS media queries to ensure single column layout for smaller screens.

--- a/index.html
+++ b/index.html
@@ -115,31 +115,31 @@
 <section class="steps-section">
     <div class="steps">
         <div class="row title">How to Become an Oregon State Trooper</div>
-        <div class="column" id="step-1">
+        <div class="step-column" id="step-1">
             <h4>Step 1: Apply</h4>
             <p>Applicants must submit an <strong>online job application</strong> with all supplemental materials and information.</p>
         </div>
-        <div class="column" id="step-2">
+        <div class="step-column" id="step-2">
             <h4>Step 2: Entry Level Testing</h4>
             <p>Applicants must then pass the <strong>Entry Level Testing (ELT)</strong>, consisting of the <strong>physical fitness test</strong>, an academic exam, and a <strong>pre-offer psychological exam and risk assessment</strong>.</p>
         </div>
-        <div class="column" id="step-3">
+        <div class="step-column" id="step-3">
             <h4>Step 3: Command Interview</h4>
             <p>Applicants selected to move onto this stage will then sit with a panel of Oregon State Police Majors and Captains for a <strong>30-to-40-minute interview.</strong></p>
         </div>
-        <div class="column" id="step-4">
+        <div class="step-column" id="step-4">
             <h4>Step 4: Background Check</h4>
             <p>Applicants must fill out a <strong>Recruit Background History Packet</strong> and sign wavers permitting OSP to conduct a thorough <strong>background investigation</strong>.</p>
         </div>
-        <div class="column" id="step-5">
+        <div class="step-column" id="step-5">
             <h4>Step 5: Conditional Offer</h4>
             <p>At this stage, OSP will extend a <strong>conditional job offer</strong> to applicants deemed up for the challenge of becoming a Trooper.</p>
         </div>
-        <div class="column" id="step-6">
+        <div class="step-column" id="step-6">
         <h4>Step 6: Post-Offer Evaluation</h4>
         <p>Successful applicants will then be scheduled for the required <strong>medical screening</strong>, <strong>psychological examination</strong>, and a <strong>fingerprint check</strong>.</p>
         </div>
-        <div class="column last" id="step-7">
+        <div class="step-column last" id="step-7">
             <h4>Step 7: Appointment & Training</h4>
             <p>Trooper Recruits attend training consisting of:</p>
             <ul>
