[fix] Updated application link
The application link for the Oregon State Police Recruit Trooper position has been updated to the correct URL.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="text">
             <h1>Apply the Law.<br/> Apply Yourself.<br/> <span>Apply Today.</span></h1>
             <p>Launch a rewarding and impactful career<br class="hide"/> as a Trooper with the Oregon State Police.</p>
-            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video">
             <video id="ospVideo" width="100%" autoplay muted loop>
@@ -33,9 +33,9 @@
         </div> -->
     </div>
 </header>
-<section class="deadline">
+<!-- <section class="deadline">
     Deadline to Apply: November 30th, 2023
-</section>
+</section> -->
 <section class="exceptional">
     <div class="flexbox" style="gap: 128px;">
         <div class="osp_bike">
@@ -44,7 +44,7 @@
         <div class="text">
             <h2>An Exceptional Force Seeking Exceptional Recruits</h2>
             <p>The Oregon State Police is a modern, multi-disciplined policing agency charged with protecting Oregon’s people, wildlife, and natural resources. We are recruiting exceptional individuals for an exceptional opportunity to build a meaningful, fulfilling career in law enforcement.</p>
-            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn" role="button">Apply Now</a>
         </div>
     </div>
 </section>
@@ -54,7 +54,7 @@
     </div>
     <div class="text">
         <h2>Join Our Modern, Multi-Disciplinary Police Force</h2>
-        <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
+        <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn" role="button">Apply Now</a>
     </div>
 </section>
 <section class="threecolumn">
@@ -81,7 +81,7 @@
         <div class="text">
             <h2>Do You Have <br class="hide"/>What it Takes?</h2>
             <p>Interested in how to become a Trooper? Before we invite you to our training academy, you will need to show you meet the requirements and have the skills needed to succeed as an Oregon State Trooper. Beyond the physical and academic qualifications, this includes possessing the composure, compassion and confidence necessary to serve.</p>
-            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video protostars">
             <video
@@ -103,12 +103,12 @@
         <div class="column one">
             <h2>A Natural Next Step <br class="hide"/>for Military Veterans</h2>
             <p>The skills you have gained in service of your country directly transfer to a career in law enforcement. If you are looking to continue your career in service, the Oregon State Police is a perfect fit.</p>
-            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn serv" role="button">Apply Now</a>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn serv" role="button">Apply Now</a>
         </div>
         <div class="column two">
             <h2>Make a Lateral <br class="hide"/>Transfer</h2>
             <p>Are you already working in another part of law enforcement? Or are you a cop in another state looking to make a lateral transfer? Our pay structure, benefits, and diversity of programs, jobs, and growth opportunities are exceptional.</p>
-            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn serv" role="button">Apply Now</a>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn serv" role="button">Apply Now</a>
         </div>
     </div>
 </section>
@@ -150,7 +150,7 @@
             </ul>
         </div>
         <div class="row button">                           
-            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn" role="button">Apply Now</a>
         </div>
     </div>
 </section>
@@ -191,7 +191,7 @@
         <p>All costs related to the application process (meals and associated travel notwithstanding) are covered by OSP. All training costs are fully paid for once an applicant has been hired as a Trooper Recruit.</p>
     </div>
     <div class="button">                           
-        <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
+        <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-143355" class="apply-now-btn" role="button">Apply Now</a>
     </div>
 </section>
 <!-- DELETE BELOW -->
